--- a/src/_header.html
+++ b/src/_header.html
@@ -61,7 +61,7 @@
                 <a href="timetable.html" class="button-link header__button-link">Расписание</a>
               </li>
               <li class="header__nav header__nav-hover">
-                <a href="classes.html" class="button-link header__button-link header__button-link-classes">Категории</a>
+                <div href="" class="button-link header__button-link header__button-link-classes">Категории</div>
                 <nav class="header__submenu">
                   <ul class="header__submenu-navbar">
                     <li class="header__submenu-nav">
@@ -72,6 +72,9 @@
                     </li>
                     <li class="header__submenu-nav">
                       <a href="class-single-aerobics.html" class="header__submenu-nav-link">Аэробика</a>
+                    </li>
+                    <li class="header__submenu-nav">
+                      <a href="classes.html" class="header__submenu-nav-link">Все категории</a>
                     </li>
                   </ul>
                 </nav>
