--- a/src/pricing.html
+++ b/src/pricing.html
@@ -83,7 +83,7 @@
                   <li class="pricing-block__prefs">Фитнес-тестирование</li>
                   <li class="pricing-block__prefs">Инструктаж во всех залах</li>
                   <li class="pricing-block__prefs">Посещение в любое время</li>
-                  <li class="pricing-block__prefs">Привилегии от партнеров GYM</li>
+                  <li class="pricing-block__prefs">Привилегии от партнеров</li>
                   <li class="pricing-block__prefs">Скидка 20% на СПА</li>
                 </ul>
                 <a href="#" class="pricing-block__btn">Приобрести</a>
