--- a/src/_comment.html
+++ b/src/_comment.html
@@ -3,9 +3,10 @@
     <svg class="comment__icon">
       <use xlink:href="img/icons/icons.svg#twitter"></use>
     </svg>
-    <p class="comment__text">
+    <h2 class="comment__text">
       RT Коллинс: Тренер — это подъёмный кран, ученик — строящееся здание. Даже став выше крана, здание нуждается в нём, если желает стать небоскрёбом.
       <a href="#" class="comment__link">2 дня назад</a>
-    </p>
+    </h2>
   </div>
 </section>
+
