--- a/src/_header.html
+++ b/src/_header.html
@@ -61,7 +61,7 @@
                 <a href="timetable.html" class="button-link header__button-link">Расписание</a>
               </li>
               <li class="header__nav header__nav-hover">
-                <div href="" class="button-link header__button-link header__button-link-classes">Категории</div>
+                <div class="button-link header__button-link header__button-link-classes">Категории</div>
                 <nav class="header__submenu">
                   <ul class="header__submenu-navbar">
                     <li class="header__submenu-nav">
