--- a/src/blog.html
+++ b/src/blog.html
@@ -29,7 +29,7 @@
               </svg>
             </div>
             <h3 class="blog-block__title">30-минут Кардио тренировки для сжигания жира. Упражнения для похудения в домашних условиях. </h3>
-            <iframe class="blog-block__video"src="https://www.youtube.com/embed/bnzHECC0Z8A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="blog-block__video" src="https://www.youtube.com/embed/bnzHECC0Z8A" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <p class="blog-block__text">Каждая девушка мечтает о тонкой талии и плоском животике. Ведь это очень привлекательно и повышает самооценку. Как же этого достичь?
               Всё не так уж сложно, необходимо немного времени, столько же усилий и мечта будет достигнута. Однако достижение результата будет зависеть от точности выполнения рекомендаций и упражнений.</p>
             <div class="blog-block__bottom">
