--- a/src/classes.html
+++ b/src/classes.html
@@ -25,7 +25,7 @@
               <h3 class="class-block__title">Кикбоксинг</h3>
               <p class="class-block__subtitle">Кикбоксинг – это боевое искусство, где принято наносить удары и руками, и ногами.Cочетает в себе восточные единоборства и классический бокс.</p>
               <div class="class-block__trainer">
-                <img src="img/small/john.jpg" class="class-block__trainer-img">
+                <img src="img/small/john.jpg" class="class-block__trainer-img" alt="trainer-img">
                 <p class="class-block__spec">Тренер</p>
                 <p class="class-block__name">Джон Джонс</p>
                 <p class="class-block__text">Он же папа, мама, бабушка и дедушка</p>
@@ -42,7 +42,7 @@
               <h3 class="class-block__title">Спиннинг</h3>
               <p class="class-block__subtitle">Cпининг — это ритмическое катание на тренажере-велосипеде в ритм музыки и в соответствии с  указаниями тренера.</p>
               <div class="class-block__trainer">
-                <img src="img/small/rebecca.png" class="class-block__trainer-img">
+                <img src="img/small/rebecca.png" class="class-block__trainer-img" alt="trainer-img">
                 <p class="class-block__spec">Тренер</p>
                 <p class="class-block__name">Ребекка Смит</p>
                 <p class="class-block__text">Тренер, который отдает вам всего себя</p>
@@ -59,7 +59,7 @@
               <h3 class="class-block__title">Кроссфит</h3>
               <p class="class-block__subtitle">Кроссфит – это вид функциональных тренировок, объединяющий в себе кардионагрузки, гимнастические и силовые упражнения.</p>
               <div class="class-block__trainer">
-                <img src="img/small/mark.jpg" class="class-block__trainer-img">
+                <img src="img/small/mark.jpg" class="class-block__trainer-img" alt="trainer-img">
                 <p class="class-block__spec">Тренер</p>
                 <p class="class-block__name">Марк Шторм</p>
                 <p class="class-block__text">Прокачаю вашу выносливость и силу.</p>
@@ -76,7 +76,7 @@
               <h3 class="class-block__title">Аэробика</h3>
               <p class="class-block__subtitle">Аэробика – это активные, быстрые тренировки, особенно актуальные для тех, кто хочет быстро похудеть.</p>
               <div class="class-block__trainer">
-                <img src="img/small/jasmine.jpg" class="class-block__trainer-img">
+                <img src="img/small/jasmine.jpg" class="class-block__trainer-img" alt="trainer-img">
                 <p class="class-block__spec">Тренер</p>
                 <p class="class-block__name">Жасмин Паттер</p>
                 <p class="class-block__text">Заряжаю своих учеников энергией
@@ -94,7 +94,7 @@
               <h3 class="class-block__title">Кардиофитнес</h3>
               <p class="class-block__subtitle">Кардиофитнес– это комплекс упражнений, которые увеличивают сердечный ритм и усиливают циркуляцию крови по всему телу.</p>
               <div class="class-block__trainer">
-                <img src="img/small/jack.jpg" class="class-block__trainer-img">
+                <img src="img/small/jack.jpg" class="class-block__trainer-img" alt="trainer-img">
                 <p class="class-block__spec">Тренер</p>
                 <p class="class-block__name">Джэк Гудман</p>
                 <p class="class-block__text">Помогаю создать идеальное тело</p>
@@ -111,7 +111,7 @@
               <h3 class="class-block__title">Бокс</h3>
               <p class="class-block__subtitle"> Бокс – это олимпийский контактный вид спорта, в котором разрешены удары только кулаками и только в специальных перчатках.</p>
               <div class="class-block__trainer">
-                <img src="img/small/dami.jpg" class="class-block__trainer-img">
+                <img src="img/small/dami.jpg" class="class-block__trainer-img" alt="trainer-img">
                 <p class="class-block__spec">Тренер</p>
                 <p class="class-block__name">Дэми Мосс</p>
                 <p class="class-block__text">Научу давать всем сдачи</p>
