--- a/src/index.html
+++ b/src/index.html
@@ -56,21 +56,21 @@
             @@include('_liveroom.html', {
             "second_word": "Спиннинг",
             "room": "Зал 2",
-            "image": '<img src="img/index/spinning.jpg" class="liveroom__image"></img>'
+            "image": '<img src="img/index/spinning.jpg" class="liveroom__image" alt="spinning-img">'
             })
           </a>
           <a href="#" class="main__liveroom-link">
             @@include('_liveroom.html', {
             "second_word": "Спортзал",
             "room": "Зал 1",
-            "image": '<img src="img/index/gym.jpg" class="liveroom__image"></img>'
+            "image": '<img src="img/index/gym.jpg" class="liveroom__image" alt="gym-img">'
             })
           </a>
           <a href="#" class="main__liveroom-link">
             @@include('_liveroom.html', {
             "second_word": "Пилатес",
             "room": "Зал 4",
-            "image": '<img src="img/index/pilates.png" class="liveroom__image"></img>'
+            "image": '<img src="img/index/pilates.png" class="liveroom__image" alt="pilates-img">'
             })
           </a>
         </div>
@@ -99,7 +99,7 @@
         <a href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Москва</a>
         <a href="https://yandex.ru/maps/213/moscow/house/solyanskiy_proyezd_1/Z04YcARlT0ACQFtvfXt0dXxkYg==/?ll=37.636270%2C55.754052&rtext=55.754375%2C37.633587~55.754223%2C37.635125&rtt=pd&ruri=ymapsbm1%3A%2F%2Ftransit%2Fstop%3Fid%3Dstation__9858823~ymapsbm1%3A%2F%2Fgeo%3Fll%3D37.635%252C55.754%26spn%3D0.001%252C0.001%26text%3D%25D0%25A0%25D0%25BE%25D1%2581%25D1%2581%25D0%25B8%25D1%258F%252C%2520%25D0%259C%25D0%25BE%25D1%2581%25D0%25BA%25D0%25B2%25D0%25B0%252C%2520%25D0%259B%25D1%2583%25D0%25B1%25D1%258F%25D0%25BD%25D1%2581%25D0%25BA%25D0%25B8%25D0%25B9%2520%25D0%25BF%25D1%2580%25D0%25BE%25D0%25B5%25D0%25B7%25D0%25B4%252C%252027%252F1%25D1%25811&utm_medium=mapframe&utm_source=maps&z=18" style="color:#eee;font-size:12px;position:absolute;top:14px;">Солянский проезд, 1 — Яндекс.Карты</a>
         <div class="overlay" onClick="style.pointerEvents='none'"></div>
-        <iframe class="main__map-block" src="https://yandex.ru/map-widget/v1/-/CCUMB0usgB"  allowfullscreen="true" style="position:relative;">
+        <iframe class="main__map-block" src="https://yandex.ru/map-widget/v1/-/CCUMB0usgB"  allowfullscreen style="position:relative;">
         </iframe>
       </div>
       <div class="schedule">
