head meta and gallery

--- a/src/class-single-cardio.html
+++ b/src/class-single-cardio.html
@@ -4,7 +4,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="GYM">
+    <meta property="og:site_name" content="GYM Фитнес">
+    <meta property="og:image" content="img/gym_link-img.png"/>
     <title>Кардио фитнес</title>
+
+  <link rel="icon" href="img/gym_link-icon.svg">
   
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
