--- a/src/_events.html
+++ b/src/_events.html
@@ -6,7 +6,7 @@
     <div class="events__event">
       <div class="events__date">
         <p class="events__date-text">
-          15 сен, 2020
+          27 сен, 2020
         </p>
         <img class="events__img" src="img/aerobics-1.jpg" alt="aerobics-img">
       </div>
@@ -29,11 +29,11 @@
       </div>
       <div class="events__info">
         <p class="events__time">12.00 - 13.00</p>
-        <p class="events__name">Спиннинг</p>
+        <p class="events__name">Кардио фитнес</p>
         <p class="events__text">
-          Ритмическое катание на тренажере-велосипеде в ритм музыки
+          Тренировки ускоряющие сердцебиение и учащающие дыхание
         </p>
-        <a href="class-single-spinning.html" class="events__btn">Читать</a>
+        <a href="class-single-cardio.html" class="events__btn">Читать</a>
       </div>
     </div>
   </div>
