--- a/src/_trainers.html
+++ b/src/_trainers.html
@@ -20,12 +20,12 @@
             <svg class="trainers__icon trainers__icon-thumb">
               <use xlink:href="img/icons/icons.svg#thumbs-up-hand-symbol"></use>
             </svg>
-            <a href="#" class="trainers__twitter-link">
+            <a href="https://twitter.com/" class="trainers__twitter-link" target="_blank">
               <svg class="trainers__icon trainers__icon-twitter">
                 <use xlink:href="img/icons/icons.svg#twitter"></use>
               </svg>
             </a>
-            <a href="#" class="trainers__facebook-link">
+            <a href="https://www.facebook.com/" class="trainers__facebook-link" target="_blank">
               <svg class="trainers__icon trainers__icon-facebook">
                 <use xlink:href="img/icons/icons.svg#facebook"></use>
               </svg>
@@ -47,12 +47,12 @@
             <svg class="trainers__icon trainers__icon-thumb">
               <use xlink:href="img/icons/icons.svg#thumbs-up-hand-symbol"></use>
             </svg>
-            <a href="#" class="trainers__twitter-link">
+            <a href="https://twitter.com/" class="trainers__twitter-link" target="_blank">
               <svg class="trainers__icon trainers__icon-twitter">
                 <use xlink:href="img/icons/icons.svg#twitter"></use>
               </svg>
             </a>
-            <a href="#" class="trainers__facebook-link">
+            <a href="https://www.facebook.com/" class="trainers__facebook-link" target="_blank">
               <svg class="trainers__icon trainers__icon-facebook">
                 <use xlink:href="img/icons/icons.svg#facebook"></use>
               </svg>
@@ -77,12 +77,12 @@
             <svg class="trainers__icon trainers__icon-thumb">
               <use xlink:href="img/icons/icons.svg#thumbs-up-hand-symbol"></use>
             </svg>
-            <a href="#" class="trainers__twitter-link">
+            <a href="https://twitter.com/" class="trainers__twitter-link" target="_blank">
               <svg class="trainers__icon trainers__icon-twitter">
                 <use xlink:href="img/icons/icons.svg#twitter"></use>
               </svg>
             </a>
-            <a href="#" class="trainers__facebook-link">
+            <a href="https://www.facebook.com/" class="trainers__facebook-link" target="_blank">
               <svg class="trainers__icon trainers__icon-facebook">
                 <use xlink:href="img/icons/icons.svg#facebook"></use>
               </svg>
@@ -104,12 +104,12 @@
             <svg class="trainers__icon trainers__icon-thumb">
               <use xlink:href="img/icons/icons.svg#thumbs-up-hand-symbol"></use>
             </svg>
-            <a href="#" class="trainers__twitter-link">
+            <a href="https://twitter.com/" class="trainers__twitter-link" target="_blank">
               <svg class="trainers__icon trainers__icon-twitter">
                 <use xlink:href="img/icons/icons.svg#twitter"></use>
               </svg>
             </a>
-            <a href="#" class="trainers__facebook-link">
+            <a href="https://www.facebook.com/" class="trainers__facebook-link" target="_blank">
               <svg class="trainers__icon trainers__icon-facebook">
                 <use xlink:href="img/icons/icons.svg#facebook"></use>
               </svg>
@@ -134,12 +134,12 @@
             <svg class="trainers__icon trainers__icon-thumb">
               <use xlink:href="img/icons/icons.svg#thumbs-up-hand-symbol"></use>
             </svg>
-            <a href="#" class="trainers__twitter-link">
+            <a href="https://twitter.com/" class="trainers__twitter-link" target="_blank">
               <svg class="trainers__icon trainers__icon-twitter">
                 <use xlink:href="img/icons/icons.svg#twitter"></use>
               </svg>
             </a>
-            <a href="#" class="trainers__facebook-link">
+            <a href="https://www.facebook.com/" class="trainers__facebook-link" target="_blank">
               <svg class="trainers__icon trainers__icon-facebook">
                 <use xlink:href="img/icons/icons.svg#facebook"></use>
               </svg>
@@ -161,12 +161,12 @@
             <svg class="trainers__icon trainers__icon-thumb">
               <use xlink:href="img/icons/icons.svg#thumbs-up-hand-symbol"></use>
             </svg>
-            <a href="#" class="trainers__twitter-link">
+            <a href="https://twitter.com/" class="trainers__twitter-link" target="_blank">
               <svg class="trainers__icon trainers__icon-twitter">
                 <use xlink:href="img/icons/icons.svg#twitter"></use>
               </svg>
             </a>
-            <a href="#" class="trainers__facebook-link">
+            <a href="https://www.facebook.com/" class="trainers__facebook-link" target="_blank">
               <svg class="trainers__icon trainers__icon-facebook">
                 <use xlink:href="img/icons/icons.svg#facebook"></use>
               </svg>
