--- a/src/about.html
+++ b/src/about.html
@@ -60,12 +60,12 @@
                   <svg class="trainers__icon trainers__icon-thumb">
                     <use xlink:href="img/icons/icons.svg#thumbs-up-hand-symbol"></use>
                   </svg>
-                  <a href="#" class="trainers__twitter-link">
+                  <a href="https://twitter.com/" class="trainers__twitter-link" target="_blank">
                     <svg class="trainers__icon trainers__icon-twitter">
                       <use xlink:href="img/icons/icons.svg#twitter"></use>
                     </svg>
                   </a>
-                  <a href="#" class="trainers__facebook-link">
+                  <a href="https://www.facebook.com/" class="trainers__facebook-link" target="_blank">
                     <svg class="trainers__icon trainers__icon-facebook">
                       <use xlink:href="img/icons/icons.svg#facebook"></use>
                     </svg>
@@ -97,12 +97,12 @@
                   <svg class="trainers__icon trainers__icon-thumb">
                     <use xlink:href="img/icons/icons.svg#thumbs-up-hand-symbol"></use>
                   </svg>
-                  <a href="#" class="trainers__twitter-link">
+                  <a href="https://twitter.com/" class="trainers__twitter-link" target="_blank">
                     <svg class="trainers__icon trainers__icon-twitter">
                       <use xlink:href="img/icons/icons.svg#twitter"></use>
                     </svg>
                   </a>
-                  <a href="#" class="trainers__facebook-link">
+                  <a href="https://www.facebook.com/" class="trainers__facebook-link" target="_blank">
                     <svg class="trainers__icon trainers__icon-facebook">
                       <use xlink:href="img/icons/icons.svg#facebook"></use>
                     </svg>
@@ -134,12 +134,12 @@
                   <svg class="trainers__icon trainers__icon-thumb">
                     <use xlink:href="img/icons/icons.svg#thumbs-up-hand-symbol"></use>
                   </svg>
-                  <a href="#" class="trainers__twitter-link">
+                  <a href="https://twitter.com/" class="trainers__twitter-link" target="_blank">
                     <svg class="trainers__icon trainers__icon-twitter">
                       <use xlink:href="img/icons/icons.svg#twitter"></use>
                     </svg>
                   </a>
-                  <a href="#" class="trainers__facebook-link">
+                  <a href="https://www.facebook.com/" class="trainers__facebook-link" target="_blank">
                     <svg class="trainers__icon trainers__icon-facebook">
                       <use xlink:href="img/icons/icons.svg#facebook"></use>
                     </svg>
@@ -171,12 +171,12 @@
                   <svg class="trainers__icon trainers__icon-thumb">
                     <use xlink:href="img/icons/icons.svg#thumbs-up-hand-symbol"></use>
                   </svg>
-                  <a href="#" class="trainers__twitter-link">
+                  <a href="https://twitter.com/" class="trainers__twitter-link" target="_blank">
                     <svg class="trainers__icon trainers__icon-twitter">
                       <use xlink:href="img/icons/icons.svg#twitter"></use>
                     </svg>
                   </a>
-                  <a href="#" class="trainers__facebook-link">
+                  <a href="https://www.facebook.com/" class="trainers__facebook-link" target="_blank">
                     <svg class="trainers__icon trainers__icon-facebook">
                       <use xlink:href="img/icons/icons.svg#facebook"></use>
                     </svg>
@@ -208,12 +208,12 @@
                   <svg class="trainers__icon trainers__icon-thumb">
                     <use xlink:href="img/icons/icons.svg#thumbs-up-hand-symbol"></use>
                   </svg>
-                  <a href="#" class="trainers__twitter-link">
+                  <a href="https://twitter.com/" class="trainers__twitter-link" target="_blank">
                     <svg class="trainers__icon trainers__icon-twitter">
                       <use xlink:href="img/icons/icons.svg#twitter"></use>
                     </svg>
                   </a>
-                  <a href="#" class="trainers__facebook-link">
+                  <a href="https://www.facebook.com/" class="trainers__facebook-link" target="_blank">
                     <svg class="trainers__icon trainers__icon-facebook">
                       <use xlink:href="img/icons/icons.svg#facebook"></use>
                     </svg>
@@ -245,12 +245,12 @@
                   <svg class="trainers__icon trainers__icon-thumb">
                     <use xlink:href="img/icons/icons.svg#thumbs-up-hand-symbol"></use>
                   </svg>
-                  <a href="#" class="trainers__twitter-link">
+                  <a href="https://twitter.com/" class="trainers__twitter-link" target="_blank">
                     <svg class="trainers__icon trainers__icon-twitter">
                       <use xlink:href="img/icons/icons.svg#twitter"></use>
                     </svg>
                   </a>
-                  <a href="#" class="trainers__facebook-link">
+                  <a href="https://www.facebook.com/" class="trainers__facebook-link" target="_blank">
                     <svg class="trainers__icon trainers__icon-facebook">
                       <use xlink:href="img/icons/icons.svg#facebook"></use>
                     </svg>
